--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav class="navbar">
     <div class="content">
-      <div class="logo"><a href="#">logo</a></div>
+      <div class="logo"><a href="index.html">logo</a></div>
       <ul class="menu-list">
         <div class="icon cancel-btn">
           <i class="fas fa-times"></i>
